# drone-delivery-powered-by-depin

./: .gitignore  .gitmodules  README.md
anchor-drone-delivery-marketplace/: Anchor.toml
anchor-drone-delivery-marketplace/programs/anchor-drone-delivery-marketplace/: Cargo.toml
anchor-drone-delivery-marketplace/tests/: anchor-drone-delivery-marketplace.rs  anchor-drone-delivery-marketplace.ts
delivery-events/: Anchor.toml
delivery-events/programs/delivery-events/: Cargo.toml
delivery-events/programs/delivery-events/src/: events.rs
delivery-events/programs/delivery-events/src/instructions/: initialize.rs  mod.rs  ready_to_fly.rs
delivery-events/programs/delivery-events/src/state/: drone_state.rs
delivery-events/tests/: delivery-events.ts
docs/arc diagram/: deliver-to-letterbox.excalidraw
drone-contract/tests/: delivery-events.ts
eventcpp/: .gitignore  platformio.ini
eventcpp/include/: ConfigLoader.h  SolanaUtils.h
eventcpp/src/: main.cpp
firmware/: README.md
firmware/esp32-drone/include/: ssid.h
firmware/esp32-drone/src/: GetSolanaLogsUtils.cpp
firmware/esp32-letterbox/: platformio.ini
firmware/esp32-letterbox/include/: AnchorEvents.h  GetSolanaLogsUtils.h  SolanaUtils.h  keypair.h
firmware/esp32-letterbox/src/: AnchorEvents.cpp  main.cpp
firmware/eventcpp/include/: ConfigLoader.h
firmware/eventcpp/src/: SolanaUtils.cpp  main.cpp
hardware/depin-draft/: compile_commands.json
hardware/depin-draft/include/: PriceOracle.h  SolanaUtils.h
hardware/esp32-drone/: platformio.ini
hardware/raspberry-pi5-drone/: README.md
(+31 files in other folders)
