[package]
name = "delivery-events"
version = "0.1.0"
description = "Drone Delivery"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "delivery_events"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]


[dependencies]
anchor-lang = "0.31.1"